# sherpa

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CITATION  CONTRIBUTING.md  COPYRIGHT  MANIFEST.in  README.md  README.txt  RELEASE_NOTES  SECURITY.md  _addons.py  _fileLister.py  build_clib.py  build_ext.py  code_of_conduct.md  codecov.yml  conda_build_config.yaml  debug.ipynb  debug2.ipynb  install_lib.py  meson.build  meson.options  pyproject.toml  pytest.ini  readthedocs.yml  sdist.py  setup.cfg  setup.py  setup_helpers.py  test_requirements.txt  tox.ini  versioneer.py
sherpa/astro/: __init__.py  all.py  background.py  data.py  fake.py  flux.py  instrument.py  meson.build  plot.py  polarization.py
sherpa/astro/datastack/: __init__.py  ds.py  ixpestack.py  meson.build  utils.py
sherpa/astro/io/: __init__.py  backends.py  crates_backend.py  dummy_backend.py  io_types.py  meson.build  meta.py  pyfits_backend.py  types.py  wcs.py  xstable.py
sherpa/astro/models/: __init__.py  meson.build
sherpa/astro/optical/: __init__.py  meson.build
sherpa/astro/sim/: __init__.py  fullbayes.py  meson.build  pragbayes.py
sherpa/astro/tests/: meson.build  test_astro.py  test_astro_data.py  test_astro_data2.py  test_astro_data_asca_unit.py  test_astro_data_axisorder.py  test_astro_data_chandra_unit.py  test_astro_data_notebook.py  test_astro_data_rosat_unit.py  test_astro_data_swift_unit.py  test_astro_data_xmm_unit.py  test_astro_diag_arfrmf.py  test_astro_flux.py  test_astro_instrument.py  test_astro_pha_scale.py  test_astro_plot.py  test_cache.py  test_data.py  test_fake_pha.py  test_instrument.py  test_plot.py
sherpa/astro/ui/: __init__.py  meson.build  serialize.py  utils.py
sherpa/astro/utils/: __init__.py  meson.build  smoke.py  xspec.py
sherpa/astro/xspec/: __init__.py  convenience.py  meson.build  regrid.py  utils.py
sherpa/estmethods/: __init__.py  meson.build
sherpa/estmethods/src/: estutils.cc  estutils.hh  estwrappers.cc  estwrappers.cc~  info_matrix.cc  info_matrix.hh  projection.cc  projection.hh
sherpa/estmethods/tests/: meson.build  test_conf.py  test_estmethods.py
sherpa/include/sherpa/: MersenneTwister.h  StopWatch.hh  StreamingException.hh  array.hh  array.hh~  constants.hh  extension.hh  fcmp.hh  functor.hh  integration.hh  meson.build  model_extension.hh  models.hh  myArray.hh  python.hh  stat_extension.hh  stats.hh  utils.hh
sherpa/models/: __init__.py  astropy.py  basic.py  cache.py  meson.build  model.py  parameter.py  regrid.py  template.py  tokens.py
sherpa/models/src/: _modelfcts.cc
sherpa/models/tests/: meson.build  test_basic.py  test_basic_cache.py  test_caching.py  test_model.py  test_model_get_components.py  test_model_notebook.py  test_model_op.py  test_parameter.py  test_psf_rebin.py  test_regrid.py  test_regrid_unit.py  test_table_model.py  test_tablemodel.py  test_template.py  test_template_unit.py
sherpa/optmethods/: __init__.py  buildin.py  meson.build  myminuit.py  myoptfcts.py  ncoresde.py  ncoresnm.py  opt.py  optfcts.py  optoptimagic.py  optscipy.py  transformation.py
sherpa/optmethods/src/: DifEvo.cc  DifEvo.hh  DirectSearch.hh  MulDirSearch.cc  MulDirSearch.hh  NelderMead.cc  NelderMead.hh  Opt.hh  PyWrapper.hh  RanOpt.hh  Simplex.cc  Simplex.hh  _minim.pyf  _saoopt.cc  minim.cc  minim.f  minim.hh  syminv.f
sherpa/optmethods/tests/: _tstoptfct.cc  meson.build  test_iminuit.py  test_ncoresopt.py  test_opt_original.py  test_opt_unit.py  test_optimagic_interface.py  test_optimgic_interface.py  test_optmethods.py  test_scipy_interface.py  tstopt.hh  tstoptfct.hh  tstoptfct.hh~
sherpa/stats/: __init__.py  meson.build
sherpa/stats/src/: _statfcts.cc
sherpa/stats/tests/: meson.build  test_stats.py  test_stats_unit.py  test_user_stat.py  test_wstat.py
sherpa/tests/: meson.build  test_data.py  test_data_notebook.py  test_fit_notebook.py  test_fit_unit.py  test_instrument.py  test_sherpa.py  test_sherpa_io.py  test_stack.py  test_test.py  test_tests.py
sherpa/utils/: __init__.py  akima.py  axes.py  err.py  formatting.py  guess.py  kdtree.py  logging.py  meson.build  numeric_types.py  numpytest.py  parallel.py  random.py  test.py  testing.py  types.py
sherpa/utils/src/: _psf.cc  _pykdtree.cc  _pykdtree.cc~  _pykdtree.template.cc  _utils.cc  adapt_integrate.c  adapt_integrate.h  gen-pykdtree.py  integration.cc
sherpa/utils/tests/: __init__.py  meson.build  test_akima.py  test_err.py  test_integration.py  test_kdtree.py  test_logging.py  test_logging_unit.py  test_parallel.py  test_psf_lowlevel.py  test_psf_rebinning_unit.py  test_random.py  test_root.py  test_utils.py  test_utils_error_unit.py  test_utils_testing.py  test_utils_unit.py
subprojects/fftw-3.3.10/: Makefile.in  configure  meson.build
subprojects/fftw-3.3.10/api/: Makefile.in
subprojects/fftw-3.3.10/dft/: Makefile.in
subprojects/fftw-3.3.10/doc/: Makefile.in
subprojects/fftw-3.3.10/genfft/: Makefile.in
subprojects/fftw-3.3.10/libbench2/: Makefile.in
subprojects/fftw-3.3.10/m4/: Makefile.in
subprojects/fftw-3.3.10/mpi/: Makefile.in
subprojects/fftw-3.3.10/rdft/: Makefile.in
subprojects/fftw-3.3.10/simd-support/: Makefile.in
subprojects/fftw-3.3.10/support/: Makefile.in
subprojects/grplib/: configure  meson.build
subprojects/grplib/doc/: Makefile.am  grpadaptivesnr.xml  grpgetgroupsum.xml  grpgetgrpnum.xml  grpminslope.xml
subprojects/grplib/python/: meson.build  pygrplib.t.py
subprojects/grplib/src/: meson.build  stub_dserr.c
subprojects/region/: Makefile.in  meson.build
subprojects/region/src/: Makefile.in  cxcregion.h  meson.build  regBox.c  regEllipse.c  regMask.c  regPolygon.c  regRectangle.c  region_eval.c  region_extent.c  region_repr.c  reglexer.l  regpar.h  regparser.y
subprojects/stklib/src/: Makefile.am  dmstack.h  logical.h  meson.build  stack.c
subprojects/wcssubs/wcssubs-3.9.5/: Files  Readme  distort.c  dsspos.c  fileutil.c  fitsfile.h  hget.c  hput.c  iget.c  imhfile.c  imio.c  imio.h  meson.build  platepos.c  poly.c  proj.c  wcs.c  wcs.h  wcslib.h  worldpos.c  (+1 more)
(+700 files in other folders)
