[build-system]
requires = [
  "setuptools >= 64.0.0",  # minimum for PEP 660 editable install
  "numpy",
  "tomli; python_version < '3.11'"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "sherpa"
description = "Modeling and fitting package for scientific data analysis"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

authors = [
  { name = "Smithsonian Astrophysical Observatory / Chandra X-Ray Center", email = "cxchelp@cfa.harvard.edu" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: C",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics"
]

requires-python = ">= 3.10"
dependencies = [
  "numpy"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

# This is not a complete list, but that's because the doc build
# needs non-python packages such as pandoc and graphviz
doc = [
  # code needed for the documentation
  "sphinx>=5,<8",
  "sphinx_rtd_theme>=3.0.0",
  "sphinx-astropy",
  "nbsphinx",
  "ipykernel",
  # code needed to run the documentation tests
  "astropy",
  "matplotlib",
  "bokeh"
]

[project.urls]
Homepage = "https://cxc.harvard.edu/sherpa/"
Documentation = "https://sherpa.readthedocs.io/"
Repository = "https://github.com/sherpa/sherpa"
Issues = "https://github.com/sherpa/sherpa/issues"

[project.scripts]
sherpa_test = "sherpa:clitest"
sherpa_smoke = "sherpa:_smoke_cli"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/sherpa/_version.py"
versionfile_build = "sherpa/_version.py"
tag_prefix = ""
parentdir_prefix = "sherpa-"

[tool.setuptools.packages.find]
where = ["src"]

# Remove files used to build extension modules from the wheel.
#
[tool.setuptools.exclude-package-data]
"sherpa.astro.models.src" = ["_modelfcts.cc"]
"sherpa.astro.utils.src" = ["*"]
"sherpa.astro.xspec.src" = ["_xspec.cc"]
"sherpa.estmethods.src" = ["*"]
"sherpa.include.sherpa" = ["MersenneTwister.h"]
"sherpa.models.src" = ["_modelfcts.cc"]
"sherpa.optmethods.src" = ["*"]
"sherpa.optmethods.src.minpack" = ["*"]
"sherpa.stats.src" = ["_statfcts.cc"]
"sherpa.utils.src" = ["*"]
"sherpa.utils.src.cephes" = ["*"]
"sherpa.utils.src.gsl" = ["*"]
"sherpa.utils.src.sjohnson" = ["*"]
"sherpa.utils.src.tcd" = ["*"]
