[metadata]
name = sherpa
author = Smithsonian Astrophysical Observatory / Chandra X-Ray Center
author_email = cxchelp@head.cfa.harvard.edu
url = https://cxc.harvard.edu/sherpa/
project_urls =
    Issue Tracker = https://github.com/sherpa/sherpa/issues

description = Modeling and fitting package for scientific data analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_files = LICENSE
platforms = Linux, Mac OS X
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: C
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = ~=3.8
zip_safe = False
install_requires =
    numpy

tests_require =
    pytest-xvfb
    pytest>=5.0,!=5.23

# Be explicit as something doesn't seem quite right when using find.
#
# find sherpa -name __init__.py | sort | sed -e "s|/__init__.py||" -e "s|/|.|g"
packages =
    sherpa.astro.datastack
    sherpa.astro
    sherpa.astro.io
    sherpa.astro.models
    sherpa.astro.optical
    sherpa.astro.sim
    sherpa.astro.ui
    sherpa.astro.utils
    sherpa.astro.xspec
    sherpa.estmethods
    sherpa.image
    sherpa
    sherpa.models
    sherpa.optmethods
    sherpa.plot
    sherpa.sim
    sherpa.stats
    sherpa.ui
    sherpa.utils

# As we are being explicit with the files in options.package_data we
# do not want to turn on the auto-include mode, as we would need to
# add the files back to MANIFEST.in.
#
# include_package_data = True

[options.package_data]
# let's be explicit here: find sherpa -name tests | sort
#
sherpa.astro.datastack =
    tests/data/*
    tests/acis_bkg_model.py
    tests/test_*py
sherpa.astro.io =
    tests/test_*py
sherpa.astro.models =
    tests/test_*py
sherpa.astro.optical =
    tests/test_*py
sherpa.astro.sim =
    tests/test_*py
sherpa.astro =
    tests/test_*py
sherpa.astro.ui =
    tests/data/*
    tests/test_*py
sherpa.astro.utils =
    tests/test_*py
sherpa.astro.xspec =
    tests/test_*py
sherpa.estmethods =
    tests/test_*py
sherpa.image =
    tests/test_*py
sherpa.models =
    tests/test_*py
sherpa.optmethods =
    tests/test_*py
    tests/*.hh
    tests/_tstoptfct.cc
sherpa.plot =
    tests/test_*py
sherpa.sim =
    tests/test_*py
sherpa.stats =
    tests/test_*py
sherpa =
    include/sherpa/*.hh
    include/sherpa/astro/*.hh
    tests/a.lis
    tests/b.lis
    tests/test_*py
    static/css/*
    sherpa.rc
    sherpa-standalone.rc
sherpa.ui =
    tests/test_*py
sherpa.utils =
    tests/test_*py

[options.entry_points]
console_scripts =
    sherpa_test = sherpa:clitest
    sherpa_smoke = sherpa:_smoke_cli

[options.extras_require]
test =
    pytest-xvfb

[aliases]
build = sherpa_config xspec_config build
build_ext = sherpa_config xspec_config build_ext
develop = sherpa_config xspec_config develop
install = sherpa_config xspec_config install
bdist_wheel = sherpa_config xspec_config bdist_wheel

[versioneer]
VCS = git
style = pep440
versionfile_source = sherpa/_version.py
versionfile_build = sherpa/_version.py
tag_prefix =
parentdir_prefix = sherpa-

[sherpa_config]

# Directory where the external dependencies must be installed.
#install_dir=build

# Additional configure flags for building extern dependencies
# Set to 'None' (without quotes) to just override the default flags
#configure=None

# GROUP Python module
#disable-group=True
#group-location=build/lib/python2.7/site-packages/group.so

# Additional flags to be passed to libgrp build
#group-cflags=

# File Stack Python module
#disable-stk=True
#stk-location=build/lib/python2.7/site-packages/stk.so

# FFTW Library
# Uncomment to use a local installation
#fftw=local

# If fftw=local uncomment the following lines and
# change the default location of libraries and the name
# of the library to be linked (usually fftw3)
# (include multiple values by separating them with spaces)
#fftw-include_dirs=build/include
#fftw-lib-dirs=build/lib
#fftw-libraries=fftw3

# Region Library
# Uncomment to use a local installation
#region=local

# If region=local uncomment the following lines and
# change the default location of libraries and headers and the name
# of the library to be linked (usually region)
# (include multiple values by separating them with spaces)
#region-include_dirs=build/include
#region-lib-dirs=build/lib
#region-libraries=region
#
# Should the CXC Data Model parser be used? This enables FITS region
# files but requires the CXC Data Model code is available. If set
# then ascdm should be added to region-libraries and ensure
# that ascdm.h/ascdm.so are added to the region-include-dirs
# and region-lib-dirs directories.
#region-use-cxc-parser=False

# WCS Subroutines
# Uncomment to use a local installation
#wcs=local

# Uncomment and change default location if needed
#wcs-include-dirs=build/include
#wcs-lib-dirs=build/lib
#wcs-libraries=wcs


[build_sphinx]
source-dir = docs


# XSPEC Models
[xspec_config]
# Uncomment (set to True) to build XSPEC extension
#with-xspec=True

# If with-xspec is True, make sure to point Sherpa to right
# XSPEC-related libraries and to indicate the XSPEC version.
# As of XSPEC 12.10.0, determining the version os XSPEC at build
# time is too complex and unreliable. If you have XSPEC 12.9.0
# you can leave the version option commented out.
#
# The xspec_include_dirs and xspec_lib_dirs items should be set
# to $HEADAS/include and $HEADAS/lib respectively (expand out the
# environment variable).
#
# If you are using a full XSPEC build, then add the correct version
# numbers to the cfitsio, CCfits, and wcs libraries used in the build,
# if necessary. For XSPEC 12.11.1 (HEAsoft 6.28) this means using
# CCfits_2.5, wcs-5.19.1, and hdsp_6.28.
#
# For XSPEC 12.10.0 and later, the xspec_libraries line should
# be changed to
#
#   xspec_libraries = XSFunctions XSUtil XS hdsp_<version>
#
# If you are using the models-only XSPEC build, then the cfitsio_lib_dirs,
# ccfits_lib_dirs, and wcslib_lib_dirs will need to be set if
# these libraries are installed in a different location to the XSPEC
# libraries.
#
# The gfortran_lib_dirs should be set if needed.
#
#xspec_version = 12.9.0
#xspec_lib_dirs = None
#xspec_include_dirs = None
#xspec_libraries = XSFunctions XSModel XSUtil XS
#cfitsio_lib_dirs = None
#cfitsio_libraries = cfitsio
#ccfits_lib_dirs = None
#ccfits_libraries = CCfits
#wcslib_lib_dirs = None
#wcslib_libraries = wcs
#gfortran_lib_dirs = None
#gfortran_libraries = gfortran
