# sherpa/astro

sources = [
  '__init__.py',
  'all.py',
  'background.py',
  'data.py',
  'fake.py',
  'flux.py',
  'instrument.py',
  'plot.py'
]

py.install_sources(
  sources,
  subdir: 'sherpa/astro'
)

subdir('datastack')
subdir('io')
subdir('models')
subdir('optical')
subdir('sim')
subdir('ui')
subdir('utils')
subdir('xspec')

subdir('tests')
