# sherpa/astro/tests/

sources = [
  'test_astro_data2.py',
  'test_astro_data_notebook.py',
  'test_astro_data.py',
  'test_astro_data_rosat_unit.py',
  'test_astro_data_swift_unit.py',
  'test_astro_instrument.py',
  'test_astro_pha_scale.py',
  'test_astro_plot.py',
  'test_astro.py',
  'test_cache.py',
  'test_fake_pha.py'
]

py.install_sources(
  sources,
  subdir: 'sherpa/astro/tests'
)
